--- a/.dumi/theme/locales/zh-CN.json
+++ b/.dumi/theme/locales/zh-CN.json
@@ -52,18 +52,23 @@
   "API.form.global.props.ContextProps.reset.desc": "调用表单reset方法时触发的方法。可以在这里给表单项赋值默认值。",
   "API.form.global.props.ContextProps.destroy.desc": "表单项销毁时触发的方法。",
   "API.form.global.props.form.share.errorStyle": "错误提示信息样式，支持对象嵌套写法。",
+  "API.form.global.props.form.share.errorClass": "错误提示类名。",
   "API.form.global.props.form.share.labelPosition": "标签位置。",
   "API.form.global.props.form.share.labelStyle": "标签样式，支持对象嵌套写法。",
   "API.form.global.props.form.share.labelWidth": "标签宽度。",
+  "API.form.global.props.form.share.labelClass": "标签类名。",
   "API.form.global.props.form.share.formItemStyle": "表单项样式，支持对象嵌套写法。",
+  "API.form.global.props.form.share.formItemClass": "表单项类名。",
   "API.form.global.props.form.share.trigger": "触发校验事件。",
   "API.form.global.props.form.share.contentStyle": "表单项内容样式，支持对象嵌套写法。",
+  "API.form.global.props.form.share.contentClass": "内容区域样式类名。",
   "API.form.global.props.form.share.fullWidth": "表单项宽度是否撑满整。",
   "API.form.global.props.form.share.contextProps": "表单项选项式生命周期。对整个表单进行依赖收集的地方，可以在这里对表单项做一些更加精确的控制。使用 useForm 时，通常不会需要这个。使用 FormItem 或者 Form 时或者定制化表单时，需要用到这个。当 useForm 与 Form 或者 FormItem 结合使用的时候，需要将 useForm 暴露出的 contextProps 传递给组件来进行依赖收集，也可以在你的代码里做一层代理执行某些逻辑后，在执行 contextProps 里的生命周期达到自定义的控制。",
   "API.form.global.props.form.share.readOnly": "表单项是否只读，会将这个属性传递给表单项的渲染控件。如果不支持readOnly属性，则需要在外部做一层转换。",
   "API.form.global.props.form.share.readOnlyText": "自定义只读状态下显示的内容",
   "API.form.global.props.form.share.formatChangeValue": "格式化控件的value值, react-form-simple的内部表单项默认取的是标准事件对象里的value ,即<strong>e.target.value</strong>, 如果你的控件是这个上面做了一层封装返回的不是标准事件对象，需要传入这个方法，react-form-simple的表单项的value将会获取这个方法的返回值。<div>用法：<a href='/zh-CN/intro/introduce#集成第三方-ui'>集成第三方UI</a></div>",
   "API.form.global.props.form.formStyle": "表单样式，支持对象嵌套写法。",
+  "API.form.global.props.form.formClass": "表单容器类名。",
   "API.form.global.props.form.direction": "表单整体布局方向。",
   "API.form.global.props.formItem.rules": "表单项校验规则，如果为空数组或者没值，表单项将不会校验。",
   "API.form.global.props.formItem.bindId": "表单项绑定的字段名，用来标识表单项的唯一性，如果存在useForm，需要与useForm里的字段名对应。要使表单项受控，这个必传。",
