docs: add footer local

--- a/.dumi/theme/locales/en-US.json
+++ b/.dumi/theme/locales/en-US.json
@@ -15,6 +15,12 @@
   "hero.feature.typeTitle": "Type Inference",
   "hero.feature.type": "Provide complete type inference and form model data inference.",
   "hero.feature.sandPackage": "Online quiz",
+  "hero.footer.source": "Related Resources",
+  "hero.footer.useCase": "Use Cases",
+  "hero.footer.plan": "Implementation Plan for Controlled React Forms",
+  "hero.footer.license": "License",
+  "hero.footer.wxin": "wxin",
+  "hero.footer.friendshipLink": "Friendship Link",
   "footer.desc.star.text": "If it makes your form development easier, please add a star to us",
   "footer.desc.issue.text": "If you encounter difficulties during use, please let us know",
   "API.useForm.render.desc": "The form item rendering function accepts two parameters, the first parameter is the form item field, and the second parameter is the form item configuration.<div>More configurations: <a href='/intro/api#formitem'>FormItem</a></div>",
