--- a/.dumi/theme/locales/zh-CN.json
+++ b/.dumi/theme/locales/zh-CN.json
@@ -15,6 +15,12 @@
   "hero.feature.typeTitle": "类型推断",
   "hero.feature.type": "提供完整的类型推断, 表单模型数据推断。",
   "hero.feature.sandPackage": "在线小试",
+  "hero.footer.source": "相关资源",
+  "hero.footer.useCase": "使用案例",
+  "hero.footer.plan": "react表单受控的实现方案",
+  "hero.footer.license": "协议",
+  "hero.footer.wxin": "微信",
+  "hero.footer.friendshipLink": "友情推荐",
   "footer.desc.star.text": "如果让你的表单开发变得更加容易，请给我们加颗星",
   "footer.desc.issue.text": "如果你在使用过程中遇到了困难，请给我们提",
   "API.useForm.render.desc": "表单项渲染函数，接收两个参数，第一个参数为表单项字段，第二个参数为表单项配置。<div>更多配置：<a href='/zh-CN/intro/api#formitem'>FormItem</a</div>",
