docs: add hero page EN

--- a/.dumi/theme/locales/en-US.json
+++ b/.dumi/theme/locales/en-US.json
@@ -16,7 +16,11 @@
   "hero.feature.type": "Provide complete type inference and form model data inference.",
   "hero.feature.sandPackage": "Online quiz",
   "hero.text.modelUI.desc": "Separation of data and UI.",
-  "hero.text.modelUI.content": "Data and UI should not be tied to each other, they should be independent. You can place rendered form controls anywhere without worrying about the impact and dependencies of handling data.",
+  "hero.text.modelUI.content": "Data and UI should not be tied to each other, they should be independent. React Form Simple provides a solution based on MVVM architecture design. By using the render function as a bridge, it binds the view to the model and realizes the separation of data and UI. You can place the rendered form controls anywhere without worrying about the impact and dependency issues brought by processing data.",
+  "hero.text.watch.title.desc": "Powerful data Observation",
+  "hero.text.watch.content.desc": "Improve the responsiveness of your form by listening to changes in individual input values. Subscribe to changes in field values ​​where needed without re-rendering the entire form.",
+  "hero.text.watch.area.title.desc": "Region Isolation Rendering",
+  "hero.text.watch.area.content.desc": "Have you considered how many times a user will trigger a component re-render? And have you optimized the performance issues after multiple renderings? React Form Simple uses regional isolation rendering of form items to reduce unnecessary performance loss.",
   "hero.text.try.desc": "Try it?",
   "hero.footer.source": "Related Resources",
   "hero.footer.useCase": "Use Cases",
