docs: add hero ZH

--- a/.dumi/theme/locales/zh-CN.json
+++ b/.dumi/theme/locales/zh-CN.json
@@ -15,7 +15,11 @@
   "hero.feature.typeTitle": "类型推断",
   "hero.feature.type": "提供完整的类型推断, 表单模型数据推断。",
   "hero.text.modelUI.desc": "数据与UI的分离。",
-  "hero.text.modelUI.content": "数据和 UI 不应该相互捆绑，它们应该是独立的。您可以将渲染的表单控件放置在任何地方，而不必担心处理数据所带来的影响和依赖的问题。",
+  "hero.text.modelUI.content": "数据和 UI 不应该相互捆绑，它们应该是独立的。React Form Simple 提供了基于 MVVM 架构设计的解决方案。通过 render 函数作为桥梁，它将视图与模型绑定，实现了数据与 UI 的分离。您可以将渲染的表单控件放置在任何地方，而不必担心处理数据所带来的影响和依赖的问题。",
+  "hero.text.watch.title.desc": "强大的数据观测",
+  "hero.text.watch.content.desc": "监听独立的输入值变化提升表单的动态响应能力。在需要的地方订阅字段值的变化而无须重渲染整个表单。",
+  "hero.text.watch.area.title.desc": "区域隔离渲染",
+  "hero.text.watch.area.content.desc": "你是否考虑过用户会触发多少次组件的重渲染？以及是否优化过多次渲染后的性能问题？React Form Simple 采用表单项的区域隔离渲染，以减少不必要的性能损耗。",
   "hero.text.try.desc": "尝试一下?",
   "hero.feature.sandPackage": "在线小试",
   "hero.footer.source": "相关资源",
