--- a/.dumi/theme/locales/zh-CN.json
+++ b/.dumi/theme/locales/zh-CN.json
@@ -33,13 +33,15 @@
   "API.useForm.render.desc": "表单项渲染函数，接收两个参数，第一个参数为表单项字段，第二个参数为表单项配置。<div>用法： <a href='/zh-CN/intro/controller'>受控输入</a></div>",
   "API.useForm.render.args.config.defineProps": "在表单项内部状态发生改变需要根据这些状态定义相应的prop传给渲染控件的时候调用。",
   "API.useForm.useSubscribe.desc": "订阅表单项或者整个表单的hook。接收一个函数，这个函数的返回参数是表单最新的模型数据。返回值则是需要被订阅的数据。",
+  "API.useForm.watch.desc": "通过函数创建表单监听，在某些场景下需要手动取消订阅。",
+  "API.useForm.unWatch.desc": "取消通过函数方式创建的监听。",
   "API.useForm.deep.desc": "深度收集render渲染的当前表单控件的onChange事件和value 属性，为true时， 不管层级多深都会对表单控件进行收集，为false时， 只收集第一层级的onChange和value。",
   "API.useForm.useWatch.desc": "观测表单数据变化的hook。接收两个函数，第一个函数返回需要被观察的模型数据，第二个参数为被观测的模型数据发生改变时执行的回调。观察多个数据的话第一个函数需要返回一个数组。如果只观察一个，允许返回一个字符串。第二个函数会返回两个回调参数，第一个参数为改变后的value，第二个参数为改变前的value，返回的参数类型将会根据第一个函数的返回值类型来，如果第一个函数返回的是字符串的话，那回调参数的类型也将是value，否则就是数组。",
   "API.useForm.model.desc": "表单模型数据。model的值永远是表单项受控后最新的值。在提交表单数据和在受控表单项内部值的时候，通常会用到model。但是请不要用它来在表单项外部来用它重新渲染视图，它不会重新表单外部的视图渲染。如果需要在外部用最新的值来渲染，请使用useSubscribe来订阅值。",
   "API.useForm.setState.desc": "手动重新渲染视图。如果在外部需要重新渲染视图，可以调用setState让当前组件树重新渲染。1.4.1版本之后废弃，请改用forceUpdate方法调用。",
   "API.useForm.forceUpdate.desc": "手动重新渲染视图。如果在外部需要重新渲染视图，可以调用forceUpdate让当前组件树重新渲染。",
   "API.event.onChange.tag.type.desc": "表单项渲染的控件value改变后如果要确定具体控件类型所接收的可选值，默认取的是onChange标准事件对象的target.type。",
-  "API.form.share.validate.desc": "表单校验。返回一个Promise，如果全部校验通过，会执行<strong>.then()</strong>，否则会执行<strong>.catch()</strong>并将错误信息在<strong>.catch</strong>(err => {})里返回出来。",
+  "API.form.share.validate.desc": "表单校验。返回一个Promise，校验通过，执行<strong>.then()</strong>，否则执行<strong>.catch()</strong>。",
   "API.form.share.reset.desc": "重置表单，只有当表单项传入了defaultValue时，该表单项才能被reset。使用useForm时，内部已经默认使用defaultValue。也可以在render函数的参数里传入defaultValue覆盖默认值。使用FormItem的时候需要手动传入。",
   "API.form.clearValidate.desc": "清除校验信息，只是清除校验时产生的错误，校验器依然存在。接收对应的表单项字段，可以为单个字段，也可以是字段的集合，如果不传bindId，则会清除整个表单的校验信息。",
   "API.form.removeValidator.desc": "移除校验器。调用此方法后，表单项后续的校验将不会触发。接收对应的表单项字段，可以为单个字段，也可以是字段的集合，如果不传bindId，则会移除整个表单的校验。",
